=========
CHANGELOG
=========

4.1.1 (unreleased)
==================

-

4.1.0 (2024-05-13)
==================

- Drop Python 3.7, Django 3.2. Support Python 3.11 and 3.12, Django 4.2 and 5.0. #123 

4.0.0 (2022-10-17)
==================

- Drop support for Python < 3.7 / Django < 3.2
- Remove jsonfield dependency in favor of django.db.models.JSONField
	WARNING : This can break your migration. jsonfield used to create a text column for your json data when running 'makemigrations'. However, django.db.models.JSONField creates a json column using database-backend specific column types (ie jsonb on postgresql). As such your model field that used to be a text column is now a jsonb column.

3.2.1 (2022-02-21)
==================

- Set default initial value to form field #116 

3.2.0 (2021-04-15)
==================

- Support Django 3.2.

3.1.0 (2020-10-27)
==================

- Drop support for Python 2 and Django < 2.2
- Fix warnings in Django 3.1
- Use explicit srid in get_queryset #106
- Add support for crs_type using the view options #107

3.0.0 (2020-03-02)
===================

- Fix with_modelname option after first iteration
- Drop Django 1.11 support
- jsonfield 3.0 support, drop 2.x support

2.12.0 (2018-12-05)
===================

- Change media type to 'application/geo+json'
- Make with_modelname option available in views
- Drop Django 1.8 support.
- Fixed unnecessary GDAL dependency. (#100, thanks @coredumperror)

2.11.0 (2017-12-05)
===================

- Django 2.0 support.
- Fix setup.py encoding error.

2.10.0 (2017-02-28)
===================

- python 3.5 support.


2.9.1 (2016-08-22)
==================

** Bug fixes **

- Remove deprecation warnings with Django 1.8 (#78, thanks @AchilleAsh)


2.9.0 (2016-02-08)
==================

** New features **

- handle natural keys in views (#74, thanks Achille Ash!)

** Bug fixes **

- Add Django 1.9 compatibility (#69, thanks Julien Le Sech!)